# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./thoughts";
 export * from "./actions";
+export * from "./followUpPlans";
